--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.1",
+    "canvas-confetti": "^1.6.0",
+    "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
+    "react-canvas-confetti": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
-    "react-toastify": "^9.1.2"
+    "react-toastify": "^9.1.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
