--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^2.0.1",
     "canvas-confetti": "^1.6.0",
     "formik": "^2.4.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
@@ -23,6 +24,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
