--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.1",
+    "@types/react-lazy-load-image-component": "^1.5.3",
     "canvas-confetti": "^1.6.0",
     "formik": "^2.4.1",
     "jwt-decode": "^3.1.2",
@@ -20,8 +21,11 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-canvas-confetti": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.2",
+    "react-tsparticles": "^2.10.1",
+    "tsparticles": "^2.10.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
