--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@auth0/auth0-react": "^2.0.1",
     "canvas-confetti": "^1.6.0",
     "formik": "^2.4.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
