--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.1",
+    "@mercadopago/sdk-react": "^0.0.14",
     "canvas-confetti": "^1.6.0",
     "formik": "^2.4.1",
     "html2canvas": "^1.4.1",
